code đã merge và fix các lỗi - chưa làm đẹp lại ui